test/sc++/error/forall-mesh-shadow.scpp
../../scc/error/forall-mesh-shadow.sc